# Build 5.9.12 Release ?/??/2021
  1. Prop_Have/WearAdjuster supports item sets now
  2. MANACOST and MANAMINCOST entries in coffeemud.ini allows more flexible skill costs
  3. Skill use will now attempt to check range before consuming mana/resources
  4. New locale types: undergroundcitystreet and underwatercitystreet
  5. New command: abilities
  6. Default MINMANACOST is now skill level or 10, whichever is greater.
  7. Many crafting skills now support FROM syntax to specify specific resources.
  8. Metacraft will select random resource by weight.  New value filter for metacraft in Random Generator.
  9. All achievements now support PLAYERMASK, even if it makes no sense.
 10. Lots of new achievements -- mostly skill proficiency related
 11. Prop_InstantDeath can now kill you less instantly.
 12. STARTMANA, STARTMOVE, and STARTHP in ini file can append to class changes/level.
 13. New INI entry: BONUSACT -- for global action bonus tweeking
 14. Crafting skill INFO command now supports expertises and specific resources
 15. CLASSSYSTEM has new class limit boundary options, and new GAIN and SWITCH for train cost.
 16. New achievement flag: REMORT, for forcing remorting players to re-acquire player achivements.
 17. Something new will go here eventually
 18. New prayer: sense chants
  
# Build 5.9.11.1 Release 02/26/2021
  Bug Fix Release:
  1. Fixed experience gains when EFFECTCXL is 0.
  2. Changed EFFECTCXL default back to 0.
  3. Fixed Enchanted Item mana-checks.
# Build 5.9.11 Release 02/20/2021
  1. a(n) is now official filter syntax for a/an
  2. Shutdown command now supports AT syntax to set a RL time certain.
  3. Languages now support a translation ID to assist shopkeepers with slang languages.
  4. New Locale: ShoreGrid
  5. Amputation can be done to player followers, with their permission.
  6. Look can now target items in open containers
  7. Prop_*Adjuster now supports ABLEPROFS and ABLELVLS, and will give log errors in arguments