@@ -94,7 +94,7 @@ CREATE TABLE CMCHAR (
 	CMHEIT int NULL ,
 	CMWEIT int NULL ,
 	CMPRPT char (250) NULL,
-	CMCOLR char (100) NULL,
+	CMCOLR char (255) NULL,
 	CMLSIP char (100) NULL,
 	CMEMAL char (255) NULL,
 	CMPFIL CLOB NULL,
